Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="main_content">
           <p><strong>TinyReflectiveToolkit</strong> is a small CLR library that offers some cool reflection-related facilities.</p>
 
-<p>It's written and maintained by <strong><a href="https://github.com/TChatzigiannakis">Theodoros Chatzigiannakis</a></strong>. It's free software, released under the <strong><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE">GNU GPLv3</a></strong>. </p>
+<p>It's written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>. It's free software, released under the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>GNU GPLv3</strong></a> and alternative licensing terms can be discussed.</p>
 
 <h1>
 <a name="highlights" class="anchor" href="#highlights"><span class="octicon octicon-link"></span></a>Highlights</h1>
@@ -45,7 +45,7 @@
 
 <p>But there are scenarios in which eager loading and thus a longer startup time is preferred over incremental but possibly unpredictable lazy loading of dependencies. (A game is an example of an application that might fall into this category.)</p>
 
-<p>The <code>AssemblyLoader</code> class gives you the opportunity to <strong>load pending dependencies</strong> (and their dependencies, in turn) <strong>at any specified point.</strong></p>
+<p>The <strong><code>AssemblyLoader</code></strong> class gives you the opportunity to <strong>eagerly load pending dependencies</strong> (and their dependencies, in turn) <strong>at any specified point.</strong></p>
 
 <ul>
 <li>It works <strong>without requiring any configuration</strong> from you. </li>
