Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <hr>
 
         <section id="main_content">
-          <p><strong>TinyReflectiveToolkit</strong> is a small CLR library that offers some cool reflection-related facilities.</p>
+          <p><strong>TinyReflectiveToolkit</strong> is a small CLR library that offers some cool reflection-related facilities. It's still a very early version - a stable API is far away.</p>
 
-<p>It's written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>. It's free software, released under the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>GNU GPLv3</strong></a> and alternative licensing terms can be discussed.</p>
+<p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>.</p>
+
+<p>It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>GNU GPLv3</strong></a>. If this is too restrictive for your needs and you would like to obtain it under different licensing terms, feel free to contact me.</p>
 
 <h1>
 <a name="highlights" class="anchor" href="#highlights"><span class="octicon octicon-link"></span></a>Highlights</h1>
