Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <a name="highlights" class="anchor" href="#highlights"><span class="octicon octicon-link"></span></a>Highlights</h1>
 
 <h2>
-<a name="assemblyloader" class="anchor" href="#assemblyloader"><span class="octicon octicon-link"></span></a>AssemblyLoader</h2>
+<a name="assemblyloader-loading-dependencies-eagerly" class="anchor" href="#assemblyloader-loading-dependencies-eagerly"><span class="octicon octicon-link"></span></a>AssemblyLoader: Loading dependencies eagerly</h2>
 
 <p>By default, your runtime may be loading your application's dependencies lazily - that is, just before the first time you attempt to use them. This is good for applications that value short startup time and can handle small, distributed performance hits along the way.</p>
 
