Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p><strong>TinyReflectiveToolkit</strong> is a small CLR library that offers some cool reflection-related facilities. It's still a very early version - a stable API is far away.</p>
+          <p><strong>TinyReflectiveToolkit</strong> is a small C# library that offers some cool reflection-related facilities. It's still a very early version and a stable API is far, far away.</p>
 
 <p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>.</p>
 
