--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>TinyReflectiveToolkit by TChatzigiannakis</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>TinyReflectiveToolkit</title>
-  <meta name="description" content="A small library containing utilities related to reflection under the CLR.">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">TinyReflectiveToolkit</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">A small library containing utilities related to reflection under the CLR.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit" class="code">View TinyReflectiveToolkit on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p><strong>TinyReflectiveToolkit</strong> is a small C# library that offers some cool reflection-related facilities. It's still a very early version and a stable API is far, far away.</p>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>TinyReflectiveToolkit</h1>
+        <p>A small library containing utilities related to reflection under the CLR.</p>
+        <p class="view"><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit">View the Project on GitHub <small>TChatzigiannakis/TinyReflectiveToolkit</small></a></p>
+        <ul>
+          <li><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p><strong>TinyReflectiveToolkit</strong> is a small C# library that offers some cool reflection-related facilities. It's still a very early version and a stable API is far, far away.</p>
 
 <p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>.</p>
 
@@ -62,9 +53,9 @@
 <p><strong>It exposes events</strong> to which you can subscribe and be alerted between loading dependencies - it's great for (say) creating <em>informative</em> splash screens for your application!</p>
 
 <pre><code>    var loader = new AssemblyLoader();
-    loader.AssemblyLoading += (obj) =&gt;
+    loader.AssemblyLoading += (assembly) =&gt;
     {
-        Application.Invoke((a, b) =&gt; splash.LoadingText = obj.Name);
+        Application.Invoke((a, b) =&gt; splash.LoadingText = assembly.Name);
         Task.Delay(1).Wait();
     };
     loader.LoadAllDependencies();
@@ -178,26 +169,13 @@
 </code></pre>
 
 <p>...and more stuff will be added.</p>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-      <p><a href="https://github.com/TChatzigiannakis" class="avatar"><img src="https://avatars1.githubusercontent.com/u/3066930?v=2&amp;s=60" width="48" height="48"></a> <a href="https://github.com/TChatzigiannakis">TChatzigiannakis</a> maintains <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit">TinyReflectiveToolkit</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Project maintained by <a href="https://github.com/TChatzigiannakis">TChatzigiannakis</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/tarball/master" class="tar">tar</a><a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
