--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     }
 </code></pre>
 
-<p><strong>You want to put instances of these types in a common variable</strong> or collection and call <code>GetValue()</code> on them, <strong>but you can't</strong>, because they don't have a declared relationship that would allow the substitution you want:</p>
+<p><strong>You want to put instances of these types in a common variable or collection</strong> and call <code>GetValue()</code> on them, <strong>but you can't</strong>, because they don't have a declared relationship that would allow the substitution you want:</p>
 
-<pre><code>    var values = new IValue[] 
+<pre><code>    var values = new object[] 
     {
-       new UnrelatedType1(),          // this fails
+       new UnrelatedType1(),
        new UnrelatedType2()
     };
-    var sum = values.Sum(x =&gt; x.GetValue());
+    var sum = values.Sum(x =&gt; x.GetValue());      // no GetValue() member
 </code></pre>
 
 <p>Usually, the solution is to <strong>define an interface that you know they already implement in practice:</strong></p>
