Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
 </code></pre>
 
-<p><strong>You want to put instances of these types in a common variable or collection</strong> and call <code>GetValue()</code> on them, <strong>but you can't</strong>, because they don't have a declared relationship that would allow the substitution you want:</p>
+<p>For some reason, <strong>you may want to put instances of these types in a common variable or collection</strong> and call <code>GetValue()</code> on them, <strong>but you can't</strong>, because they don't have a declared relationship that would allow the substitution you want:</p>
 
 <pre><code>    var values = new object[] 
     {
