Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <li>
 <strong>IntelliSense doesn't go away at all</strong> and neither does type safety at the call spots.</li>
 <li>When calling through the interface, <strong>the actual methods are stubs implemented using IL</strong> - the interface doesn't use reflection and lookups.</li>
-<li>It's extremely easy to use.</li>
+<li>It's extremely easy to use: just define your interface, call an extension method on those objects and let things take care of themselves automatically!</li>
 </ol>
 
 <p>Of course, it also has some disadvantages and limitations:</p>
